[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "content-calendar"
version = "0.1.0"
description = "AI-powered content planning and scheduling"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Content Calendar Team", email = "team@content-calendar.ai" }
]
requires-python = ">=3.10"
keywords = ["content", "calendar", "scheduling", "ai", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.24",
    "icalendar>=5.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
sheets = [
    "gspread>=5.0",
    "google-auth>=2.0",
]

[project.scripts]
content-calendar = "content_calendar.cli:cli"

[tool.setuptools.packages.find]
include = ["content_calendar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
